[package]
name = "rua-list"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
log = "0.4.17"
tokio = { version = "1.27.0", features = ["full"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
clap = { version = "4.2.1", features = ["derive"] }
thiserror = "1.0.40"
anyhow = "1.0.70"
chrono = "0.4.24"
axum = "0.6.15"
reqwest = "0.11.16"
wildmatch = "2.1.1"
tower = "0.4.13"
