[package]
name = "rua-list"
version = "1.5.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.28"
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
clap = { version = "4.5.47", features = ["derive"] }
thiserror = "2.0.16"
anyhow = "1.0.99"
axum = "0.8.4"
reqwest = { version = "0.12.23", default-features = false, features = [
    "charset",
    "http2",
    "system-proxy",
    "rustls-tls",
] }
wildmatch = "2.4.0"
tower = { version = "0.5.2", features = ["full"] }
tower-http = { version = "0.6.6", features = ["full"] }
async-trait = "0.1.89"
futures-util = "0.3.31"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tracing-appender = "0.2.3"
tracing-error = "0.2.1"
color-eyre = "0.6.5"

# [target.'cfg(unix)'.dependencies]
# openssl = { version = "=0.10.73", features = ["vendored"] }
